[gd_scene load_steps=8 format=3 uid="uid://hdmls64yby83"]

[ext_resource type="Script" path="res://scripts/ui/upgrade_button.gd" id="1_upgrade_button"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card_border"]
bg_color = Color(0.9, 0.8, 0.3, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 0.9, 0.4, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 10
shadow_color = Color(1, 0.8, 0, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card_inner"]
bg_color = Color(0.12, 0.12, 0.22, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.7, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
bg_color = Color(0.2, 0.15, 0.4, 1)
border_width_bottom = 2
border_color = Color(0.8, 0.6, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.15, 0.15, 0.3, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.8, 0.7, 0.3, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 8
shadow_color = Color(0.8, 0.7, 0.3, 0.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.2, 0.2, 0.4, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 0.9, 0.4, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 15
shadow_color = Color(1, 0.9, 0.4, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.3, 0.3, 0.5, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 1, 0.6, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 20
shadow_color = Color(1, 1, 0.5, 1)

[node name="UpgradeButton" type="Button"]
custom_minimum_size = Vector2(300, 380)
script = ExtResource("1_upgrade_button")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")

[node name="CardBorder" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card_border")

[node name="CardInner" type="Panel" parent="CardBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card_inner")

[node name="VBoxContainer" type="VBoxContainer" parent="CardBorder/CardInner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 15

[node name="Header" type="Panel" parent="CardBorder/CardInner/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="HeaderLabel" type="Label" parent="CardBorder/CardInner/VBoxContainer/Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "✦ MEJORA ✦"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2

[node name="IconContainer" type="CenterContainer" parent="CardBorder/CardInner/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
mouse_filter = 2

[node name="IconLabel" type="Label" parent="CardBorder/CardInner/VBoxContainer/IconContainer"]
layout_mode = 2
text = "✦"
theme_override_font_sizes/font_size = 80
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3

[node name="Separator" type="ColorRect" parent="CardBorder/CardInner/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
mouse_filter = 2
color = Color(0.6, 0.5, 1, 0.5)

[node name="UpgradeName" type="Label" parent="CardBorder/CardInner/VBoxContainer"]
layout_mode = 2
text = "Nombre Upgrade"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 26
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_colors/font_shadow_color = Color(0.5, 0.3, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3

[node name="UpgradeDescription" type="Label" parent="CardBorder/CardInner/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "Descripción del upgrade"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)

[node name="Spacer" type="Control" parent="CardBorder/CardInner/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Footer" type="Label" parent="CardBorder/CardInner/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "━━━━━━━━━━"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.8, 0.7, 0.4, 1)
